--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,16 +1,16 @@
-@import "fonts";
-@import "rouge-github";
+@use "fonts";
+@use "rouge-github";
 
 body {
-  background-color: #fff;
+  background-color: #221f22;
   padding:50px;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
-  font-weight:400;
+  font: 16px/1.5 "JetBrain";
+  color:#fcfcfa;
+  font-weight:200;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#ff6188;
   margin:0 0 20px;
 }
 
@@ -27,27 +27,29 @@ h1 {
 }
 
 h2 {
-  color:#393939;
+  font-size: 22px;
+  color: #bf5168;
 }
 
+
 h3, h4, h5, h6 {
-  color:#494949;
+  font-size: 20px;
+  color: #af3158;
 }
 
 a {
-  color:#267CB9;
+  color:#1c98f7;
   text-decoration:none;
 }
 
 a:hover, a:focus {
-  color:#069;
-  font-weight: bold;
+  text-decoration: underline;
+  font-weight: italic;
 }
 
 a small {
   font-size:11px;
-  color:#777;
-  margin-top:-0.3em;
+  margin-top:-0.1em;
   display:block;
 }
 
@@ -56,8 +58,8 @@ a:hover small {
 }
 
 .wrapper {
-  width:860px;
-  margin:0 auto;
+  width:760px;
+  margin:0;
 }
 
 blockquote {
@@ -68,13 +70,13 @@ blockquote {
 }
 
 code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-  color:#333;
+  font-family: 'JetBrain';
+  font-style:monospace;
 }
 
 pre {
   padding:8px 15px;
-  background: #f8f8f8;
+  background: #19181a;
   border-radius:5px;
   border:1px solid #e5e5e5;
   overflow-x: auto;
@@ -92,12 +94,11 @@ th, td {
 }
 
 dt {
-  color:#444;
-  font-weight:700;
+  font-weight:300;
 }
 
 th {
-  color:#444;
+  color:#67fa67;
 }
 
 img {
@@ -105,7 +106,7 @@ img {
 }
 
 kbd {
-  background-color: #fafbfc;
+  background-color: #000;
   border: 1px solid #c6cbd1;
   border-bottom-color: #959da5;
   border-radius: 3px;
@@ -125,64 +126,9 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-ul.downloads {
-  list-style:none;
-  height:40px;
-  padding:0;
-  background: #f4f4f4;
-  border-radius:5px;
-  border:1px solid #e0e0e0;
-  width:270px;
-}
-
-.downloads li {
-  width:89px;
-  float:left;
-  border-right:1px solid #e0e0e0;
-  height:40px;
-}
-
-.downloads li:first-child a {
-  border-radius:5px 0 0 5px;
-}
-
-.downloads li:last-child a {
-  border-radius:0 5px 5px 0;
-}
-
-.downloads a {
-  line-height:1;
-  font-size:11px;
-  color:#676767;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:34px;
-}
-
-.downloads a:hover, .downloads a:focus {
-  color:#675C5C;
-  font-weight:bold;
-}
-
-.downloads ul a:active {
-  background-color:#f0f0f0;
-}
-
 strong {
-  color:#222;
+  color:#fcfcfa;
   font-weight:700;
-}
-
-.downloads li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-.downloads a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
 }
 
 section {
@@ -214,7 +160,7 @@ footer {
 
   div.wrapper {
     width:auto;
-    margin:0;
+    margin:auto;
   }
 
   header, section, footer {
@@ -224,7 +170,7 @@ footer {
   }
 
   header {
-    padding-right:320px;
+    padding-right:280px;
   }
 
   section {
@@ -239,7 +185,7 @@ footer {
   }
 
   header ul {
-    position:absolute;
+    position:left;
     right:50px;
     top:52px;
   }
@@ -266,14 +212,6 @@ footer {
 @media print, screen and (max-width: 480px) {
   body {
     padding:15px;
-  }
-
-  .downloads {
-    width:99%;
-  }
-
-  .downloads li, .downloads li + li + li {
-    width:33%;
   }
 }
 
